--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,19 +1,54 @@
 ---
 
-- hosts:  ubuntu
+- hosts: all 
   become: true
   tasks:
 
   - name: update repository index
     apt:
       update_cache: yes
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: install apache packet
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution in ["Debian", "Ubuntu"]
+
+  - name: update repository index - Centos
+    dnf:
+      update_cache: yes
+    when: ansible_distribution in ["CentOS"]
+
+  - name: install apache packet - CentOS
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution in ["CentOS"]
+
+  - name: httpd service start - CentOS
+    service:
+      name: httpd 
+      state: started
+    when: ansible_distribution in ["CentOS"]
+
+  - name: Create firewall rules for apache server  CentOS
+    firewalld:
+      service: http
+      zone: public
+      permanent: yes
+      immediate: yes
+      state: enabled
+    when: ansible_distribution in ["CentOS"]
+
+  - name: add php support for apache - CentOS
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution in ["CentOS"]
