--- a/install_apache.yml
+++ b/install_apache.yml
@@ -9,17 +9,19 @@
       update_cache: yes
     when: ansible_distribution in ["Debian", "Ubuntu"]
 
-  - name: install apache packet
+  - name: install apache packet and php packet
     apt:
-      name: apache2
+      name: 
+        - apache2
+        - libapache2-mod-php
       state: latest
     when: ansible_distribution in ["Debian", "Ubuntu"]
 
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution in ["Debian", "Ubuntu"]
+#  - name: add php support for apache
+#    apt:
+#      name: libapache2-mod-php
+#      state: latest
+#    when: ansible_distribution in ["Debian", "Ubuntu"]
 
   - name: update repository index - Centos
     dnf:
@@ -28,7 +30,9 @@
 
   - name: install apache packet - CentOS
     dnf:
-      name: httpd
+      name: 
+        - httpd
+        - php
       state: latest
     when: ansible_distribution in ["CentOS"]
 
@@ -47,8 +51,8 @@
       state: enabled
     when: ansible_distribution in ["CentOS"]
 
-  - name: add php support for apache - CentOS
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution in ["CentOS"]
+#  - name: add php support for apache - CentOS
+#    dnf:
+#      name: php
+#      state: latest
+#    when: ansible_distribution in ["CentOS"]
